[gd_scene load_steps=33 format=1]

[ext_resource path="res://main_menu/main_menu.gd" type="Script" id=1]
[ext_resource path="res://intro_cin/intro_cinematic.tscn" type="PackedScene" id=2]
[ext_resource path="res://main_menu/moon.png" type="Texture" id=3]
[ext_resource path="res://main_menu/star.png" type="Texture" id=4]
[ext_resource path="res://ui/dream_theme.tres" type="Theme" id=5]
[ext_resource path="res://main_menu/title.png" type="Texture" id=6]
[ext_resource path="res://ui/dream_theme/9x9_expand.png" type="Texture" id=7]
[ext_resource path="res://main_menu/credits_section/flowers_0.png" type="Texture" id=8]
[ext_resource path="res://foliage/flowers/flower_sway.gd" type="Script" id=9]
[ext_resource path="res://main_menu/credits_section/flowers_1.png" type="Texture" id=10]
[ext_resource path="res://main_menu/credits_section/flowers_2.png" type="Texture" id=11]
[ext_resource path="res://main_menu/credits_section/flowers_3.png" type="Texture" id=12]
[ext_resource path="res://main_menu/credits_section/flowers_4.png" type="Texture" id=13]
[ext_resource path="res://main_menu/credits_section/flowers_5.png" type="Texture" id=14]
[ext_resource path="res://main_menu/credits_section/sword.png" type="Texture" id=15]
[ext_resource path="res://ui/ui_font.tres" type="DynamicFont" id=16]
[ext_resource path="res://ui/hover_label.gd" type="Script" id=17]
[ext_resource path="res://main_menu/theme.ogg" type="AudioStream" id=18]
[ext_resource path="res://ui/hover.wav" type="Sample" id=19]
[ext_resource path="res://networker.gd" type="Script" id=20]
[ext_resource path="res://main_menu/networker/loading.png" type="Texture" id=21]
[ext_resource path="res://camera.tscn" type="PackedScene" id=22]

[sub_resource type="Animation" id=1]

resource/name = "hide"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("moon:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("moon:transform/pos")
tracks/1/interp = 2
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 32, 64 ), Vector2( 32, 48 ) ]
}

[sub_resource type="Animation" id=2]

resource/name = "show"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("moon:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("moon:transform/pos")
tracks/1/interp = 2
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 32, 48 ), Vector2( 32, 64 ) ]
}

[sub_resource type="ConvexPolygonShape2D" id=3]

custom_solver_bias = 0.0
points = Vector2Array( 178, 173, 178, 174, 172, 186, 151, 183, 148, 172, 174, 171 )

[sub_resource type="ConvexPolygonShape2D" id=4]

custom_solver_bias = 0.0
points = Vector2Array( 174, 171, 148, 172, 146, 137, 177, 133 )

[sub_resource type="ConvexPolygonShape2D" id=5]

custom_solver_bias = 0.0
points = Vector2Array( 165, 110, 177, 129, 177, 133, 146, 137, 145, 133, 145, 131, 146, 129, 157, 109, 164, 109 )

[sub_resource type="Animation" id=6]

length = 6.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("star:transform/pos")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 41, -63 ), Vector2( 41, -59 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("star:modulate")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5, 1, 1.4, 2, 3.8, 4.1, 4.2, 4.33719, 4.8, 5.3, 5.58204, 5.9 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.322392 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.322392 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.322392 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]

length = 5.0
loop = false
step = 0.1
tracks/0/type = "method"
tracks/0/path = NodePath("anim")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 5 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [ "default" ],
"method": "play"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("star:modulate")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.103843 ), Color( 1, 1, 1, 0.387961 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("star:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 1, 2.5, 3.9, 5 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 41, -60 ), Vector2( 41, -64 ), Vector2( 41, -60 ), Vector2( 41, -64 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("moon_anim")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [ "show" ],
"method": "play"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:visibility/opacity")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0, 1.9 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=8]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("star:modulate")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.103843 ), Color( 1, 1, 1, 0.387961 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("star:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 1 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 41, -64 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 1 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_lead_out_completed"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:visibility/opacity")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("moon_anim")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [ "hide" ],
"method": "play"
} ]
}

[sub_resource type="SampleLibrary" id=9]

samples/hover = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 19 )
}

[sub_resource type="Animation" id=10]

resource/name = "loading"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("anim:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0, 7 ]
}

[node name="root" type="Node2D"]

script/script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}
cinematic = ExtResource( 2 )
continue_button = NodePath("VBoxContainer/play")

[node name="moon" type="Sprite" parent="."]

visibility/opacity = 0.0
transform/pos = Vector2( 32, 48 )
transform/scale = Vector2( 0.364583, 0.364583 )
texture = ExtResource( 3 )

[node name="moon_anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/hide = SubResource( 1 )
anims/show = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="star" type="Sprite" parent="."]

transform/pos = Vector2( 41, -64 )
texture = ExtResource( 4 )
modulate = Color( 1, 1, 1, 0.387961 )

[node name="title_text" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 5 )
margin/left = 58.0
margin/top = 41.0
margin/right = 265.0
margin/bottom = 89.0
texture = ExtResource( 6 )
stretch_mode = 0

[node name="fullscreen" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 5 )
margin/left = 0.0
margin/top = 0.0
margin/right = 17.0
margin/bottom = 19.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 7 )
flat = false

[node name="VBoxContainer" type="GridContainer" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 2
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 5 )
margin/left = -96.0
margin/top = -70.0
margin/right = -160.0
margin/bottom = 2.60938
columns = 1
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="new" type="Button" parent="VBoxContainer"]

rect/min_size = Vector2( 50, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 5 )
margin/left = 0.0
margin/top = 0.0
margin/right = 50.0
margin/bottom = 19.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="play" type="Button" parent="VBoxContainer"]

visibility/visible = false
rect/min_size = Vector2( 50, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 5 )
margin/left = 0.0
margin/top = 23.0
margin/right = 57.0
margin/bottom = 42.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Continue"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="to_credits" type="Button" parent="VBoxContainer"]

rect/min_size = Vector2( 50, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 5 )
margin/left = 0.0
margin/top = 23.0
margin/right = 50.0
margin/bottom = 42.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Credits"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="quit" type="Button" parent="VBoxContainer"]

rect/min_size = Vector2( 50, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 5 )
margin/left = 0.0
margin/top = 46.0
margin/right = 50.0
margin/bottom = 65.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="back" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 5 )
margin/left = 67.0
margin/top = 333.0
margin/right = 115.0
margin/bottom = 352.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Back"
flat = false
__meta__ = {
"_edit_group_": true
}

[node name="credits" type="Node2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 0, 200 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="flowers" type="Node2D" parent="credits"]

editor/display_folded = true
transform/pos = Vector2( 159, 170 )

[node name="0" type="Sprite" parent="credits/flowers"]

transform/pos = Vector2( -49, 11 )
transform/rot = 5.57411
texture = ExtResource( 8 )
offset = Vector2( 0.994214, -8.00816 )
script/script = ExtResource( 9 )
sway_time = 8.0
sway_range = 8.0
sway_offset = -29

[node name="1" type="Sprite" parent="credits/flowers"]

transform/pos = Vector2( -33, 21 )
transform/rot = -7.69652
texture = ExtResource( 10 )
offset = Vector2( 0.75958, -10.4126 )
script/script = ExtResource( 9 )
sway_time = 8.0
sway_range = 8.0
sway_offset = 121

[node name="2" type="Sprite" parent="credits/flowers"]

transform/pos = Vector2( -30, -4 )
transform/rot = 6.53974
texture = ExtResource( 11 )
offset = Vector2( 0.879948, -9.96121 )
script/script = ExtResource( 9 )
sway_time = 8.0
sway_range = 8.0
sway_offset = -110

[node name="3" type="Sprite" parent="credits/flowers"]

transform/pos = Vector2( -14, 1 )
transform/rot = 2.09319
texture = ExtResource( 12 )
offset = Vector2( -0.136379, -7.27883 )
script/script = ExtResource( 9 )
sway_time = 8.0
sway_range = 8.0
sway_offset = 0

[node name="4" type="Sprite" parent="credits/flowers"]

transform/pos = Vector2( 44, 17 )
transform/rot = -5.12432
texture = ExtResource( 13 )
offset = Vector2( 2.83013, -10.3918 )
script/script = ExtResource( 9 )
sway_time = 8.0
sway_range = 8.0
sway_offset = 55

[node name="5" type="Sprite" parent="credits/flowers"]

transform/pos = Vector2( 22, 8 )
transform/rot = -3.85796
texture = ExtResource( 14 )
offset = Vector2( 1.41242, -10.6773 )
script/script = ExtResource( 9 )
sway_time = 8.0
sway_range = 8.0
sway_offset = 44

[node name="6" type="Sprite" parent="credits/flowers"]

transform/pos = Vector2( -71, 15 )
transform/rot = 5.57411
texture = ExtResource( 8 )
offset = Vector2( 1, -9 )
script/script = ExtResource( 9 )
sway_time = 8.0
sway_range = 8.0
sway_offset = -29

[node name="sword" type="Sprite" parent="credits"]

transform/pos = Vector2( 165, 149 )
texture = ExtResource( 15 )

[node name="hover_label" type="Label" parent="credits"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 67.0
margin/top = 90.0
margin/right = 172.0
margin/bottom = 109.0
custom_fonts/font = ExtResource( 16 )
text = "A Game by W. J. Stevens
2017"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = ExtResource( 17 )
transition_speed = 2.0

[node name="Area2D" type="Area2D" parent="credits"]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 4 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 5 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/2/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="credits/Area2D"]

build_mode = 0
polygon = Vector2Array( 164, 109, 157, 109, 146, 129, 145, 131, 145, 133, 146, 137, 148, 172, 151, 183, 172, 186, 178, 174, 178, 173, 174, 171, 177, 133, 177, 129, 165, 110 )
shape_range = Vector2( 0, 2 )
trigger = false

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/default = SubResource( 6 )
anims/lead_in = SubResource( 7 )
anims/lead_out = SubResource( 8 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "lead_in"

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 18 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="sfx" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 9 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="main_pos" type="Position2D" parent="."]

__meta__ = {
"_edit_lock_": true
}

[node name="Position2D" type="Position2D" parent="."]

transform/pos = Vector2( 160, 100 )
__meta__ = {
"_edit_lock_": true
}

[node name="networker" type="Node2D" parent="."]

transform/pos = Vector2( 302, 17 )
script/script = ExtResource( 20 )
__meta__ = {
"_edit_group_": true
}

[node name="anim" type="Sprite" parent="networker"]

transform/scale = Vector2( 0.1875, 0.1875 )
texture = ExtResource( 21 )
hframes = 8
frame = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="networker"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/loading = SubResource( 10 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "loading"

[node name="camera" parent="." instance=ExtResource( 22 )]

[connection signal="pressed" from="fullscreen" to="." method="_on_fullscreen_pressed"]

[connection signal="pressed" from="VBoxContainer/new" to="." method="_on_new_pressed"]

[connection signal="pressed" from="VBoxContainer/play" to="." method="_on_play_pressed"]

[connection signal="pressed" from="VBoxContainer/to_credits" to="." method="_on_credits_pressed"]

[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]

[connection signal="pressed" from="back" to="." method="_on_back_pressed"]

[connection signal="mouse_enter" from="credits/Area2D" to="credits/hover_label" method="_on_mouse_enter"]

[connection signal="mouse_exit" from="credits/Area2D" to="credits/hover_label" method="_on_mouse_exit"]


